added my images, text, socials, email, resume

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
 
     <!-- Todo: put here your site title -->
-    <title>[Your name here] | Developer</title>
+    <title>Robert Martinez | Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
     <meta name="keywords" content="[username], [name], skill" />
     <!-- Todo: improve your SEO by adding a small description of you -->
@@ -46,9 +46,9 @@
     <section id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title load-hidden">
-          Hi, my name is <span class="text-color-main">Your Name</span>
+          Hi, my name is <span class="text-color-main">Robert Martinez</span>
           <br />
-          I'm the Unknown Developer.
+          I'm a Software Developer.
         </h1>
         <p class="hero-cta load-hidden">
           <a rel="noreferrer" class="cta-btn cta-btn--hero" href="#about"
@@ -79,11 +79,17 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
-                This is where you can describe about yourself. The more you
-                describe about yourself, the more chances you can!
+                <!-- This is where you can describe about yourself. The more you
+                describe about yourself, the more chances you can! -->
+                I'm a 2nd Generation U.S Army Veteran with one tour to Iraq in support of operation New Dawn, I'm also a new Father, and recent graduate.
+                I completed my college journey by obtaining a 3.77 GPA, two awards in Database Programming, and an A.A.S degree in Database Programming. 
+                I chose that degree because it offered the most exposure to multiple languages, Java, Python, SQL, PHP,
+                HTML5, CSS3. Since graduating, I've been busy learning JavaScript so I can learn React, Nodejs, Mongo...etc. I enjoy learning new things,
+                and I always have an open mind toward learning new and better techniques. Doesn't matter if I cutting an onions or learing to code,
+                if someones offers new information I'm always willing to listen.
               </p>
               <p class="about-wrapper__info-text">
-                Extra Information about you! like hobbies and your goals.
+                <!-- Father, Hunter, Fisherman/Catcher, Gamer, Learner -->
               </p>
               <span class="d-flex mt-3">
                 <a
@@ -112,21 +118,23 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 0</h3>
+                <h3 class="project-wrapper__text-title">Fairview Cemetery</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    This project was built during an internship at Double Diamond Services.
+                    I worked both front and back-end on this project doing 90% of all the design work for users
+                    and for administraion running the webpage. I also developed all the CRUD opertions, the database and MORE!
+                    During this project I learned GIT, GitHub, as well as CodeIgniter4 for PHP, though I had a great mentor too.
+                    <br>
+                    <p>HTML5 - CSS3 - PHP - CodeIgniter4 - SQL</p>
+                    <br>
                   </p>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://millsap-fairview-cemetery.com/"
                 >
                   See Live
                 </a>
@@ -134,7 +142,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/Rob-Martinez/fairview"
                 >
                   Source Code
                 </a>
@@ -153,7 +161,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project1.png"
                     />
                   </div>
                 </a>
@@ -166,21 +174,24 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 1</h3>
+                <h3 class="project-wrapper__text-title">DDSC Homepage</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                     This project was to revamp the company's homepage giving it a better feel and help myself
+                     practice while attending my last semester of college. The current live version has responsive issues at full 
+                     screen with its services section, and in mobile there is an issue with the contact information padding.
+                     Though, the last push I made to this project hasn't been set live. The owner of the page wanted to add some
+                     other features on their own before doing so.
                   </p>
+                  <br>
+                    <p>HTML5 - CSS3 - PHP</p>
+                    <br>
                 </div>
                 <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://ddsc.us/"
                 >
                   See Live
                 </a>
@@ -188,7 +199,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/Rob-Martinez/dds/blob/master/app/Views/Home/index.php"
                 >
                   Source Code
                 </a>
@@ -207,7 +218,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project2.png"
                     />
                   </div>
                 </a>
@@ -220,32 +231,30 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Project Title 2</h3>
+                <h3 class="project-wrapper__text-title">React Project Coming Soon</h3>
                 <div>
                   <p class="mb-4">
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                    Excepturi neque, ipsa animi maiores repellendus distinctio
-                    aperiam earum dolor voluptatum consequatur blanditiis
-                    inventore debitis fuga numquam voluptate ex architecto
-                    itaque molestiae.
+                    I'm currently learning JavaScript, React, Nodejs,and MongoDB. This is currently a placeholder
+                    until my project is finsihed or at a point of acceptable viewing. 
                   </p>
+                  <p>React, Nodejs, MongoDB</p>
                 </div>
-                <a
+                <!-- <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
                   href="#!"
                 >
                   See Live
-                </a>
-                <a
+                </a> -->
+                <!-- <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
                   href="#!"
                 >
                   Source Code
-                </a>
+                </a> -->
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
@@ -261,7 +270,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="assets/project3.jpg"
                     />
                   </div>
                 </a>
@@ -279,13 +288,13 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">[Put your call to action here]</p>
+          <p class="contact-wrapper__text">Please feel free to reach out to me for any concerns</p>
           <a
             rel="noreferrer"
             target="_blank"
             class="cta-btn cta-btn--resume"
-            href="mailto:example@email.com"
-            >Call to Action</a
+            href="mailto:robert.w.martinez78@gmail.com"
+            >Lets work 2-Ge-4!</a
           >
         </div>
       </div>
@@ -299,13 +308,13 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a rel="noreferrer" href="#!" target="_blank">
+          <!-- <a rel="noreferrer" href="#!" target="_blank">
             <i class="fa fa-twitter fa-inverse"></i>
-          </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          </a> -->
+          <a rel="noreferrer" href="https://linkedin.com/in/robert-martinez-26a76a198" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a rel="noreferrer" href="#!" target="_blank">
+          <a rel="noreferrer" href="https://github.com/Rob-Martinez" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
@@ -314,33 +323,9 @@
 
         <!-- Notice: if you want to give me some credit, it will be huge for me! if not, put your data on it -->
         <p class="footer__text">
-          © 2021 - Template developed by
-          <a rel="noreferrer" href="https://github.com/cobidev" target="_blank"
-            >Jacobo Martínez</a
-          >
-        </p>
-
-        <!-- TO DO: remove this entire paragraph once you finish your portfolio -->
-        <p class="mt-3 pt-3">
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio/fork"
-            data-icon="octicon-repo-forked"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Fork ntkme/github-buttons on GitHub"
-            >Fork</a
-          >
-          <a
-            rel="noreferrer"
-            class="github-button"
-            href="https://github.com/cobidev/simplefolio"
-            data-icon="octicon-star"
-            data-size="large"
-            data-show-count="true"
-            aria-label="Star cobidev/simplefolio on GitHub"
-            >Star</a
+          © 2022
+          <a rel="noreferrer" href="https://github.com/Rob-Martinez" target="_blank"
+            >Robert Martínez</a
           >
         </p>
       </div>
