added word questions to contact info

--- a/src/index.html
+++ b/src/index.html
@@ -288,7 +288,7 @@
       <div class="container">
         <h2 class="section-title">Contact</h2>
         <div class="contact-wrapper load-hidden">
-          <p class="contact-wrapper__text">Please feel free to reach out to me for any concerns</p>
+          <p class="contact-wrapper__text">Please feel free to reach out to me for any concerns or questions</p>
           <a
             rel="noreferrer"
             target="_blank"
