added profile pic to about me section

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,3 @@
-<!--
-  Hello!
-  -
-  Simplefolio is a clean and responsive portfolio template for Developers!
-  Created by Jacobo Martinez.
-  -
-  Github Repo: https://github.com/cobidev/simplefolio/
-  Readme: https://github.com/cobidev/simplefolio/README.md
-  -
-  For business & inquires, contact me -> jacobojavier98@gmail.com
--->
 <!DOCTYPE html>
 <html lang="en" class="sr">
   <head>
@@ -71,7 +60,7 @@
                 class="img-fluid rounded shadow-lg"
                 height="auto"
                 width="300px"
-                src="assets/profile.jpg"
+                src="assets/profilepic.png"
                 alt="Profile Image"
               />
             </div>
@@ -126,7 +115,7 @@
                     and for administraion running the webpage. I also developed all the CRUD opertions, the database and MORE!
                     During this project I learned GIT, GitHub, as well as CodeIgniter4 for PHP, though I had a great mentor too.
                     <br>
-                    <p>HTML5 - CSS3 - PHP - CodeIgniter4 - SQL</p>
+                    <p>HTML5 - CSS3 - Bootstrap5 - PHP - CodeIgniter4 - SQL</p>
                     <br>
                   </p>
                 </div>
@@ -150,7 +139,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://millsap-fairview-cemetery.com/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -184,7 +173,7 @@
                      other features on their own before doing so.
                   </p>
                   <br>
-                    <p>HTML5 - CSS3 - PHP</p>
+                    <p>HTML5 - CSS3 - Bootstrap5 - PHP</p>
                     <br>
                 </div>
                 <a
@@ -207,7 +196,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://ddsc.us/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
