edited text misspellings

--- a/src/index.html
+++ b/src/index.html
@@ -74,8 +74,8 @@
                 I completed my college journey by obtaining a 3.77 GPA, two awards in Database Programming, and an A.A.S degree in Database Programming. 
                 I chose that degree because it offered the most exposure to multiple languages, Java, Python, SQL, PHP,
                 HTML5, CSS3. Since graduating, I've been busy learning JavaScript so I can learn React, Nodejs, Mongo...etc. I enjoy learning new things,
-                and I always have an open mind toward learning new and better techniques. Doesn't matter if I cutting an onions or learing to code,
-                if someones offers new information I'm always willing to listen.
+                and I always have an open mind toward learning new and better techniques. Doesn't matter if I'm cutting an onion or learing to code,
+                if someone offers new information/techniques I'm always willing to listen.
               </p>
               <p class="about-wrapper__info-text">
                 <!-- Father, Hunter, Fisherman/Catcher, Gamer, Learner -->
@@ -112,8 +112,8 @@
                   <p class="mb-4">
                     This project was built during an internship at Double Diamond Services.
                     I worked both front and back-end on this project doing 90% of all the design work for users
-                    and for administraion running the webpage. I also developed all the CRUD opertions, the database and MORE!
-                    During this project I learned GIT, GitHub, as well as CodeIgniter4 for PHP, though I had a great mentor too.
+                    and for administration running the webpage. I also developed all the CRUD opertions, the database and MORE!
+                    During this project I learned GIT, GitHub, as well as CodeIgniter4 for PHP, though, I had a great mentor too.
                     <br>
                     <p>HTML5 - CSS3 - Bootstrap5 - PHP - CodeIgniter4 - SQL</p>
                     <br>
@@ -224,7 +224,7 @@
                 <div>
                   <p class="mb-4">
                     I'm currently learning JavaScript, React, Nodejs,and MongoDB. This is currently a placeholder
-                    until my project is finsihed or at a point of acceptable viewing. 
+                    until my project is finished or at a point of acceptable viewing. 
                   </p>
                   <p>React, Nodejs, MongoDB</p>
                 </div>
