edit source code buttons, add text explaining why, change that text color to red using a quick inline style

--- a/src/index.html
+++ b/src/index.html
@@ -117,6 +117,10 @@
                     <br>
                     <p>HTML5 - CSS3 - Bootstrap5 - PHP - CodeIgniter4 - SQL</p>
                     <br>
+                    <p><span style="color: red">Due to security risks Source Code is unavailable at this time.
+                       To view source code please contact me, link below</span>
+                    </p>
+                    <br>
                   </p>
                 </div>
                 <a
@@ -127,14 +131,14 @@
                 >
                   See Live
                 </a>
-                <a
+                <!-- <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
                   href="https://github.com/Rob-Martinez/fairview"
                 >
                   Source Code
-                </a>
+                </a> -->
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
@@ -175,6 +179,10 @@
                   <br>
                     <p>HTML5 - CSS3 - Bootstrap5 - PHP</p>
                     <br>
+                    <p><span style="color: red">Due to security risks Source Code is unavailable at this time.
+                      To view source code please contact me, link below</span>
+                    </p>
+                    <br>
                 </div>
                 <a
                   rel="noreferrer"
@@ -184,14 +192,14 @@
                 >
                   See Live
                 </a>
-                <a
+                <!-- <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
                   href="https://github.com/Rob-Martinez/dds/blob/master/app/Views/Home/index.php"
                 >
                   Source Code
-                </a>
+                </a> -->
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
@@ -283,8 +291,8 @@
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:robert.w.martinez78@gmail.com"
-            >Lets work 2-Ge-4!</a
-          >
+            >Lets work 2-Ge-4!
+          </a>
         </div>
       </div>
     </section>
