added robofriends to projects

--- a/src/index.html
+++ b/src/index.html
@@ -228,35 +228,37 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">React Project Coming Soon</h3>
+                <h3 class="project-wrapper__text-title">Mini React Project</h3>
                 <div>
                   <p class="mb-4">
-                    I'm currently learning JavaScript, React, Nodejs,and MongoDB. This is currently a placeholder
-                    until my project is finished or at a point of acceptable viewing. 
+                    I'm currently in the process of learning React.js. This is just a mini testing project for now.
+                    Im working on another small project in React before I move onto something larger. I just want to 
+                    hone the current understanding before taking on a larger project. 
+                    
                   </p>
-                  <p>React, Nodejs, MongoDB</p>
+                  <p>HTML - CSS - JavaScript - Tachyons.io - React.js</p>
                 </div>
-                <!-- <a
+                <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--hero"
-                  href="#!"
+                  href="https://rob-martinez.github.io/robofriends/"
                 >
                   See Live
-                </a> -->
-                <!-- <a
+                </a>
+                <a
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn text-color-main"
-                  href="#!"
+                  href="https://github.com/Rob-Martinez/robofriends"
                 >
                   Source Code
-                </a> -->
+                </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
+                <a rel="noreferrer" href="https://rob-martinez.github.io/robofriends/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
@@ -267,7 +269,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project3.jpg"
+                      src="assets/project3.png"
                     />
                   </div>
                 </a>
