change resume, and edit text in about me

--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
                 I'm a 2nd Generation U.S Army Veteran with one tour to Iraq in support of operation New Dawn, I'm also a new Father, and recent graduate.
                 I completed my college journey by obtaining a 3.77 GPA, two awards in Database Programming, and an A.A.S degree in Database Programming. 
                 I chose that degree because it offered the most exposure to multiple languages, Java, Python, SQL, PHP,
-                HTML5, CSS3. Since graduating, I've been busy learning JavaScript so I can learn React, Nodejs, Mongo...etc. I enjoy learning new things,
+                HTML5, CSS3. Since graduating, I've been busy learning React.js, and moving toward Node.js, Mongo.. etc. I enjoy learning new things,
                 and I always have an open mind toward learning new and better techniques. Doesn't matter if I'm cutting an onion or learing to code,
                 if someone offers new information/techniques I'm always willing to listen.
               </p>
