make some changes to the portfolio, added new project, changed some text around

--- a/src/index.html
+++ b/src/index.html
@@ -73,9 +73,9 @@
                 I'm a 2nd Generation U.S Army Veteran with one tour to Iraq in support of operation New Dawn, I'm also a new Father, and recent graduate.
                 I completed my college journey by obtaining a 3.77 GPA, two awards in Database Programming, and an A.A.S degree in Database Programming. 
                 I chose that degree because it offered the most exposure to multiple languages, Java, Python, SQL, PHP,
-                HTML5, CSS3. Since graduating, I've been busy learning React.js, and moving toward Node.js, Mongo.. etc. I enjoy learning new things,
-                and I always have an open mind toward learning new and better techniques. Doesn't matter if I'm cutting an onion or learing to code,
-                if someone offers new information/techniques I'm always willing to listen.
+                HTML5, CSS3. Since graduating, I've been busy learning React.js, and moving toward Node.js. I work great in teams as my Army 
+                experience can showcase, I take criticism very well, and I own up to all my mistakes. I try to do what's best for the team and not myself, 
+                because team work is what smooths out the job. "Slow is smooth, smooth is fast"
               </p>
               <p class="about-wrapper__info-text">
                 <!-- Father, Hunter, Fisherman/Catcher, Gamer, Learner -->
@@ -113,12 +113,12 @@
                     This project was built during an internship at Double Diamond Services.
                     I worked both front and back-end on this project doing 90% of all the design work for users
                     and for administration running the webpage. I also developed all the CRUD opertions, the database and MORE!
-                    During this project I learned GIT, GitHub, as well as CodeIgniter4 for PHP, though, I had a great mentor too.
+                    During this project I learned GIT, GitHub, as well as CodeIgniter4 for PHP, though, I must say I had a terrfic mentor.
                     <br>
                     <p>HTML5 - CSS3 - Bootstrap5 - PHP - CodeIgniter4 - SQL</p>
                     <br>
-                    <p><span style="color: red">Due to security risks Source Code is unavailable at this time.
-                       To view source code please contact me, link below</span>
+                    <p><span style="color: red">Out of respect for the security of the company, the source code is unavailable
+                      as this site is live and contains sensitive data.</span>
                     </p>
                     <br>
                   </p>
@@ -163,6 +163,65 @@
           </div>
           <!-- /END Project -->
 
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">React.js E-Commerce Store</h3>
+                <div>
+                  <p class="mb-4">
+                     This project is currently being completed through a Zero to Mastery course on Udemy. The course teaches React, TypeScript, 
+                     Redux, Redux-Saga, Hooks, GraphQL, Stripe payments, Firebase, Jester testing, PWA, React Routing, and more all put 
+                     into one massive E-commerce project. The course even covers Gatsby through the creation of a BLOG project. I'm currently taking this course as well as working on building my own React projects
+                     to practice the skills taught in the React course. All projects will be posted on the portfolio page as they become presentable, so they will be in various stages of work.
+                  </p>
+                  <br>
+                    <p>Reactjs, TypeScript, Stripe, Firebase, GraphQL, React Hooks, Redux, React Routing, HTML, SCSS.</p>
+                    <br>
+                    <p><span style="color: #02aab0;"
+                    >Live Version hasn't been setup yet, but the Source Code can be viewed.</span>
+                    </p>
+                    <br>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="#"
+                >
+                  See Live
+                </a>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn text-color-main"
+                  href="https://github.com/Rob-Martinez/crwn-clothing"
+                >
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/ecommerce.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
           <!-- Notice: each .row is a project -->
           <div class="row">
             <div class="col-lg-4 col-sm-12">
@@ -179,8 +238,8 @@
                   <br>
                     <p>HTML5 - CSS3 - Bootstrap5 - PHP</p>
                     <br>
-                    <p><span style="color: red">Due to security risks Source Code is unavailable at this time.
-                      To view source code please contact me, link below</span>
+                    <p><span style="color: red">Out of respect for the security of the company, the source code is unavailable
+                      as this site is live and contains sensitive data.</span>
                     </p>
                     <br>
                 </div>
@@ -232,8 +291,8 @@
                 <div>
                   <p class="mb-4">
                     I'm currently in the process of learning React.js. This is just a mini testing project for now.
-                    Im working on another small project in React before I move onto something larger. I just want to 
-                    hone the current understanding before taking on a larger project. 
+                    I'm working on another small project in React before I move onto something larger. I just want to 
+                    hone the current understanding before taking on a larger project.
                     
                   </p>
                   <p>HTML - CSS - JavaScript - Tachyons.io - React.js</p>
