changed background colors for the portfolio

--- a/src/index.html
+++ b/src/index.html
@@ -352,7 +352,7 @@
             target="_blank"
             class="cta-btn cta-btn--resume"
             href="mailto:robert.w.martinez78@gmail.com"
-            >Lets work 2-Ge-4!
+            >Lets work together!
           </a>
         </div>
       </div>
